# Quadruped

./: Part2^TestingUnitU8.STL  TestingLeverArm.STL  bringup.launch
hardware_interface/: CMakeLists(original).txt  CMakeLists.txt  package.xml
hardware_interface/PCA9685Lib/: CMakeLists.txt
hardware_interface/include/: hw_interface(original).h  hw_interface.h
hardware_interface/launch/: hw_interface.launch  parrot.launch
hardware_interface/src/: hw_interface(original).cpp  hw_interface.cpp  hw_interface.py  hw_interface_demo.cpp  servo_example.cpp
hardware_interface_bldc/: CMakeLists.txt  package.xml
hardware_interface_bldc/MathOpsLib/: math_ops.cpp  math_ops.h
hardware_interface_bldc/include/CANCommLib/: CAN_comm.cpp  CAN_comm.h  CAN_comm_lib.cpp  CAN_comm_lib.h  CMakeLists.txt
hardware_interface_bldc/include/MathOpsLib/: CMakeLists.txt  math_ops.cpp  math_ops.h
hardware_interface_bldc/src/: CAN_comm.cpp  CAN_comm_lib.cpp  hw_interface_bldc.cpp  math_ops.cpp  test_cmd_line.cpp
joint_traj_example/: CMakeLists.txt  package.xml
joint_traj_example/src/: traj_subscriber.cpp
testCAN2/: CMakeLists.txt
testCAN2/CANCommLib/: CAN_comm_libV2.cpp  CMakeLists.txt
testCAN2/MathOpsLib/: CMakeLists.txt  math_ops.cpp
